--- a/front/html/product.html
+++ b/front/html/product.html
@@ -112,6 +112,6 @@
         </div>
       </div>
     </footer>
-  <script src="..\js\products.js"></script>
+  <script src="../js/products.js"></script>
   </body>
 </html>
